[tool.poetry]
name = "house-prices-prediction"
version = "0.1.0"
description = ""
authors = ["Arthur Albarelli <arthuralbarelli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
jupyterlab = "^4.2.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
jupyterlab-git = "^0.50.1"
jupyterlab-lsp = "^5.1.0"
python-lsp-server = {extras = ["all"], version = "^1.11.0"}
kaggle = "^1.6.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
